feat: add btn scroll to form

--- a/public/index.html
+++ b/public/index.html
@@ -408,7 +408,7 @@
 						<div class="sSlider__item item-bottom text-center">
 							<h4>В сделку я вхожу всем депозитом, но без плеча. Если акций в работе две, делю депозит между ними.</h4>
 							<p>Когда Вы видите прибыль в сделке – это процент прироста к депозиту.</p>
-							<div class="btn btn-primary btn-base" href="#modal-call">Хочу получать такие же результаты!
+							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Хочу получать такие же результаты!
 								<svg class="icon icon-btn-arrow ">
 									<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 								</svg>
@@ -494,7 +494,7 @@
 						<div class="sWhyUSA__btn-wrap text-center">
 							<div class="h4">Как торговать акциями США, если Вы не из РФ?</div>
 							<p>Подойдет любой брокер, который даст Вам полный доступ к акциям рынков NYSE и NASDAQ.</p>
-							<div class="btn btn-primary btn-base" href="#modal-call">Хочу начать зарабатывать как можно быстрее
+							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Хочу начать зарабатывать как можно быстрее
 								<svg class="icon icon-btn-arrow ">
 									<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 								</svg>
@@ -697,7 +697,7 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<div class="btn btn-primary btn-base" href="#modal-call">Присоединиться к команде успешных учеников
+							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Присоединиться к команде успешных учеников
 								<svg class="icon icon-btn-arrow ">
 									<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 								</svg>
@@ -948,7 +948,7 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<div class="btn btn-primary btn-base" href="#modal-call">Получить доступ в онлайн-практикум «Точка входа»
+							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Получить доступ в онлайн-практикум «Точка входа»
 								<svg class="icon icon-btn-arrow ">
 									<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 								</svg>
@@ -988,7 +988,7 @@
 							</div>
 							<div class="sYouCan__btn-wrap text-center">
 								<h4>Поверьте в себя и начните зарабатывать реальные деньги уже на этой неделе!</h4>
-								<div class="btn btn-light btn-base link-modal-js" href="#">Получите торговую систему «Точка входа» прямо сейчас
+								<div class="btn btn-light btn-base scroll-link" href="#form-link">Получите торговую систему «Точка входа» прямо сейчас
 									<svg class="icon icon-btn-arrow ">
 										<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 									</svg>
@@ -1122,7 +1122,7 @@
 											<p></p>
 										</div>
 							</div>
-							<div class="sApply__form form">
+							<div class="sApply__form form" id="form-link">
 								<div class="form-title text-center">
 									<h4>Лучшие условия доступны самым быстрым!</h4>
 									<p>Введите свои данные прямо сейчас, чтобы выбрать выгодный комплект:</p>
@@ -1342,7 +1342,7 @@
 								<p>Время не ждет. Чем дольше Вы откладываете начало, тем больше возможностей упускаете. Присоединяйся к команде успешных трейдеров уже сегодня!</p>
 								<h4>Точка входа в «Точку входа» здесь.</h4>
 								<p>Жмите на кнопку и увидимся внутри:</p>
-								<div class="btn btn-primary btn-base" href="#modal-call">Хочу зарабатывать в трейдинге каждый день
+								<div class="btn btn-primary scroll-link btn-base" href="#form-link">Хочу зарабатывать в трейдинге каждый день
 									<svg class="icon icon-btn-arrow ">
 										<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 									</svg>
@@ -1430,7 +1430,7 @@
 							<!-- end sSuccess-->
 						</div>
 						<div class="text-center">
-							<div class="btn btn-primary btn-base" href="#modal-call">Хочу зарабатывать в трейдинге каждый день
+							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Хочу зарабатывать в трейдинге каждый день
 								<svg class="icon icon-btn-arrow ">
 									<use xlink:href="img/svg/sprite.svg#btn-arrow"></use>
 								</svg>
