--- a/public/index.html
+++ b/public/index.html
@@ -1392,20 +1392,20 @@
 <input type="hidden" name="comment_text" value="">
 <input type="hidden" name="promocode" value="">
 <div class="input_line">
-<input name="fullname" type="text" class="text" value="" placeholder="Ваши ФИО" required="required"/>
+<input name="fullname" type="text" class="text" value="" placeholder="Ваше имя" required="required"/>
 </div>
 <div class="input_line">
-<input name="email" type="email" class="text" value="" placeholder="Ваш емэйл" required="required"/>
+<input name="email" type="email" class="text" value="" placeholder="E-mail (необязательно)" required="required"/>
 </div>
 <div class="input_line">
-<input name="phone" type="text" class="text" value="" placeholder="Ваш телефон" required="required"/>
+<input name="phone" type="text" class="text" value="" placeholder="+7 (____)____-___-___" required="required"/>
 </div>
 <div class="submit_line">
-<input type="submit" class="button" name="submit" value="Продолжить">
+<input type="submit" class="button" name="submit" value="Отправить">
 </div>
 <div class="privacy_agreement_block">
 <label>
-<input type="checkbox" name="oferta_warn" value="1" checked="checked" required="required"> <span class="ibfm_txt">Я согласен с условиями</span> <a href="javascript:void(0)" onclick="return window['bf349'].popup(`https://info-dvd.ru/bbm/../../oferta?popup=1`, `win`, 1050, 450); return false;">публичной оферты</a>
+<input type="checkbox" class="form-check-input" name="oferta_warn" value="1" checked="checked" required="required"> <span class="ibfm_txt">Я согласен с условиями</span> <a href="javascript:void(0)" onclick="return window['bf349'].popup(`https://info-dvd.ru/bbm/../../oferta?popup=1`, `win`, 1050, 450); return false;">публичной оферты</a>
 </label>
 </div>
 </form>
