feat: change blok success

--- a/public/index.html
+++ b/public/index.html
@@ -1671,19 +1671,23 @@
 							<h4>Примеры моих сделок. Листай, пока рука не отсохнет</h4>
 							<p>Заполните паузу, полистайте сделки из моего Телеграм-канала. Все эти акции я выкладывал публично:</p>
 						</div>
-						<div class="sSuccess__item">
-							<div class="review-item" data-fancybox="review" data-src="img/review-4.png"><img src="img/review-4.png" alt="" loading="lazy"/>
+						<div class="sSuccess__item-wrap">
+							<div class="sSuccess__item-scroll">
+								<div class="sSuccess__item">
+									<div class="review-item" data-fancybox="review" data-src="img/review-4.png"><img src="img/review-4.png" alt="" loading="lazy"/>
+									</div>
+									<!-- end sSuccess-->
+									<div class="review-item" data-fancybox="review" data-src="img/review-3.png"><img src="img/review-3.png" alt="" loading="lazy"/>
+									</div>
+									<!-- end sSuccess-->
+									<div class="review-item" data-fancybox="review" data-src="img/review-2.png"><img src="img/review-2.png" alt="" loading="lazy"/>
+									</div>
+									<!-- end sSuccess-->
+									<div class="review-item" data-fancybox="review" data-src="img/review-1.png"><img src="img/review-1.png" alt="" loading="lazy"/>
+									</div>
+									<!-- end sSuccess-->
+								</div>
 							</div>
-							<!-- end sSuccess-->
-							<div class="review-item" data-fancybox="review" data-src="img/review-3.png"><img src="img/review-3.png" alt="" loading="lazy"/>
-							</div>
-							<!-- end sSuccess-->
-							<div class="review-item" data-fancybox="review" data-src="img/review-2.png"><img src="img/review-2.png" alt="" loading="lazy"/>
-							</div>
-							<!-- end sSuccess-->
-							<div class="review-item" data-fancybox="review" data-src="img/review-1.png"><img src="img/review-1.png" alt="" loading="lazy"/>
-							</div>
-							<!-- end sSuccess-->
 						</div>
 						<div class="text-center">
 							<div class="btn btn-primary scroll-link btn-base" href="#form-link">Хочу зарабатывать в трейдинге каждый день
